# ontology

./: PATTERN_A.md  README.md  SKILL.md  pyproject.toml
.clawhub/: origin.json
docs/: README.md
docs/examples/: project-management.md
docs/reference/: cli.md
scripts/: __init__.py  ontology.py
src/: __init__.py  cli.py
src/services/: entity_service.py  relation_service.py  schema_service.py  validation_service.py
src/utils/: graph_loader.py  id_utils.py  path_utils.py
tests/integration/: test_workflows.py
tests/unit/: test_entity_service.py  test_graph_loader.py  test_id_utils.py  test_path_utils.py  test_relation_service.py  test_schema_service.py  test_validation_service.py
